// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilesSection component should render default view for Files on a Data Collection publication type 1`] = `
<Section
  cards={
    Array [
      Object {
        "groups": Array [
          Array [
            "fez_datastream_info",
          ],
        ],
      },
      Object {
        "groups": Array [
          Array [
            "files",
          ],
        ],
        "title": "Files",
      },
      Object {
        "groups": Array [
          Array [
            "advisoryStatement",
          ],
        ],
        "title": "Advisory statement",
      },
      Object {
        "groups": Array [
          Array [
            "sensitiveHandlingNote",
          ],
        ],
        "title": "Sensitive Handling Note",
      },
      Object {
        "groups": Array [
          Array [
            "rek_copyright",
          ],
        ],
        "title": "Deposit agreement",
      },
    ]
  }
  disabled={false}
/>
`;

exports[`FilesSection component should render default view for Files on a publication type that DOES show advisory statement 1`] = `
<Section
  cards={
    Array [
      Object {
        "groups": Array [
          Array [
            "fez_datastream_info",
          ],
        ],
      },
      Object {
        "groups": Array [
          Array [
            "files",
          ],
        ],
        "title": "Files",
      },
      Object {
        "groups": Array [
          Array [
            "advisoryStatement",
          ],
        ],
        "title": "Advisory statement",
      },
      Object {
        "groups": Array [
          Array [
            "sensitiveHandlingNote",
          ],
        ],
        "title": "Sensitive Handling Note",
      },
      Object {
        "groups": Array [
          Array [
            "rek_copyright",
          ],
        ],
        "title": "Copyright agreement",
      },
    ]
  }
  disabled={false}
/>
`;
